<resources>
    <string name="app_name">Qdrive Malaysia</string>
    <string name="text_malaysia">Malaysia</string>
    <string name="text_Indonesia">Indonesia</string>
    <string name="navi_home">HOME</string>
    <string name="navi_scan">SCAN</string>
    <string name="navi_list">LIST</string>
    <string name="navi_statistics">STATISTICS</string>
    <string name="navi_setting">SETTING</string>
    <string name="navi_sub_confirm_delivery">Confirm my delivery order</string>
    <string name="navi_sub_delivery_done">Delivery Done</string>
    <string name="navi_sub_pickup">Pickup C&amp;R Parcels</string>
    <string name="navi_sub_self">Self-collection</string>
    <string name="navi_sub_in_progress">In Progress</string>
    <string name="navi_sub_upload_fail">Upload Failed</string>
    <string name="navi_sub_today_done">Today Done</string>
    <string name="navi_sub_not_in_housed">Not-IN Parcels</string>
    <string name="text_title_7e_store_delivery">7E Store Delivery</string>
    <string name="text_title_fl_delivery">Locker Alliance Delivery</string>
    <string name="text_title_fail_list">Fail List</string>
    <string name="text_title_pod_list">POD List</string>
    <string name="text_title_change_password">Change Password</string>
    <string name="text_title_my_info">My Info</string>
    <string name="text_title_message">Message</string>
    <string name="text_title_printer_setting">Printer Setting</string>
    <string name="text_title_device_info">Device Info</string>
    <string name="text_title_sms_verification">SMS Verification</string>
    <string name="text_title_scan_setting">Scan Setting</string>
    <string name="text_title_fl_pickup">Locker Alliance Pickup</string>
    <string name="text_title_locker_user_info">Locker Alliance User Information</string>
    <string name="text_title_delivery_scan">Delivery Scan</string>
    <string name="text_title_language_setting">Language Setting</string>
    <string name="text_title_scan_barcode">(Step1) Scan Barcode</string>
    <string name="text_cnr_pickup_done">C&amp;R Pickup Done</string>
    <string name="text_title_add_pickup">Add Pickup Scan No.</string>
    <string name="text_title_driver_assign">Driver Assign</string>
    <string name="text_title_scan_pickup_cnr">Scan Pickup C&amp;R no</string>
    <string name="text_title_notice">Notice</string>
    <string name="text_office">Office</string>
    <string name="text_total_qty">Total Qty</string>
    <string name="text_in_progress">In Progress</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_pickup">Pickup</string>
    <string name="text_rpc">RPC</string>
    <string name="text_downloading">Downloading</string>
    <string name="text_download_result">[Download] Result</string>
    <string name="text_upload_result">[Upload] Result</string>
    <string name="text_upload_failed_msg">Failed : %1$s</string>
    <string name="text_exception">Exception : %1$s</string>
    <string name="text_upload_success_count">Upload Success : %1$d</string>
    <string name="text_upload_fail_count">Upload Success : %1$d\nUpload Failed : %2$d\nFail Reason : %3$s</string>
    <string name="text_upload_fail_count3">Upload Success : %1$d\nUpload Failed : %2$d</string>
    <string name="text_location_setting">Location setting</string>
    <string name="text_upload_failed">Upload Failed</string>
    <string name="text_today_done">Today Done</string>
    <string name="text_search">Search</string>
    <string name="text_sort_postal_code_asc">Postal Code : Low to High</string>
    <string name="text_sort_postal_code_desc">Postal Code : High to Low</string>
    <string name="text_sort_tracking_no_asc">Tracking No : Low to High</string>
    <string name="text_sort_tracking_no_desc">Tracking No : High to Low</string>
    <string name="text_sort_name_asc">Name : Low to High</string>
    <string name="text_sort_name_desc">Name : High to Low</string>
    <string name="text_receipt_name">Receipt name&#160;:&#160;</string>
    <string name="text_parcel_qty">Parcel Qty&#160;:&#160;</string>
    <string name="text_desired_date">Desired Date&#160;:&#160;</string>
    <string name="text_qty">Qty&#160;:&#160;</string>
    <string name="text_request">Request&#160;:&#160;</string>
    <string name="text_driver_memo">Driver memo&#160;:&#160;</string>
    <string name="text_pickup_reassigned">Pickup Reassigned</string>
    <string name="text_pickup_failed">Pickup Failed</string>
    <string name="text_failed">Failed</string>
    <string name="text_retrieve">Retrieve</string>
    <string name="text_google_map">Google Map</string>
    <string name="text_up">Up</string>
    <string name="text_down">Down</string>
    <string name="text_parcel_amount">Parcel Amount&#160;:&#160;</string>
    <string name="text_tel">Tel&#160;:&#160;</string>
    <string name="text_mobile">Mobile&#160;:&#160;</string>
    <string name="text_name">Name&#160;:&#160;</string>
    <string name="text_driver_memo1">Driver Memo</string>
    <string name="text_signature">Signature</string>
    <string name="text_visit_log">Visit Log</string>
    <string name="text_start_to_scan">Start to Scan</string>
    <string name="text_zero_qty">Zero Q\'ty</string>
    <string name="text_outlet_pickup_done">Qsuttle : Pickup Done</string>
    <string name="text_pickup_cancel">Pickup Cancel</string>
    <string name="text_pickup_fail">Pickup Fail</string>
    <string name="text_qpost_auto_message">QTalk Auto Message</string>
    <string name="text_d_failed">D. Failed</string>
    <string name="text_delivered">Delivered</string>
    <string name="text_p_failed">P. Failed</string>
    <string name="text_p_cancelled">P. Cancelled</string>
    <string name="text_p_done">P. Done</string>
    <string name="text_reason">Reason&#160;:&#160;</string>
    <string name="text_memo1">Memo&#160;:&#160;</string>
    <string name="text_requestor">Requestor</string>
    <string name="text_driver">Driver</string>
    <string name="text_qpost_message">QTalk Message</string>
    <string name="text_data_error">Data error</string>
    <string name="text_scanned_qty">Scanned Qty&#160;:&#160;</string>
    <string name="text_today_done_scan_list">Today Done Scan List</string>
    <string name="text_warning">Warning</string>
    <string name="text_7e_store_address">7E Store Address</string>
    <string name="text_operation_hour">Operation hour</string>
    <string name="text_operation_hours">Operation hours</string>
    <string name="text_tracking_no">Tracking No.</string>
    <string name="text_receiver">Receiver</string>
    <string name="text_self">Self</string>
    <string name="text_substitute">Substitute</string>
    <string name="text_other">Other</string>
    <string name="text_sender">Sender</string>
    <string name="text_clear">Clear</string>
    <string name="text_memo">Memo</string>
    <string name="text_total_qty_count">Total %1$d Qty</string>
    <string name="text_parcel_qty1">Parcel Qty</string>
    <string name="text_federated_locker_address">Address</string>
    <string name="text_not_assigned_failed">&#160;Not Assigned - Failed&#160;</string>
    <string name="text_delivery_done_success">&#160;Delivery Done - Success&#160;</string>
    <string name="text_error">Error</string>
    <string name="text_please_wait">Please wait…</string>
    <string name="text_set_transfer">Set Transfer…</string>
    <string name="text_upload_fail_count1">Upload Failed : %1$d\nFail Reason : %2$s</string>
    <string name="text_date">Date</string>
    <string name="text_job_id">Job ID</string>
    <string name="text_vendor_code">Vendor Code</string>
    <string name="text_take_photo">Take Photo</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_pickup_no">Pickup No.</string>
    <string name="text_applicant">Applicant</string>
    <string name="text_bundle_type">Bundle Type</string>
    <string name="text_applicant_signature">Applicant\'s Signature</string>
    <string name="text_collector_signature">Collector\'s Signature</string>
    <string name="text_pickup_requested_qty">Pickup requested Qty</string>
    <string name="text_parcels">Parcels</string>
    <string name="text_detail_list">Detail List</string>
    <string name="text_non_q10_qfs">Non-Q10 QFS (ROUTE: Other)</string>
    <string name="text_pickup_done_success">&#160;Pickup Done - Success&#160;</string>
    <string name="text_self_collector">Self Collector…</string>
    <string name="text_self_collector_result">[Self Collector] Result</string>
    <string name="text_request_qty">Request Qty</string>
    <string name="text_cancel_reason">Cancel reason</string>
    <string name="text_wrong_address">Wrong Address</string>
    <string name="text_request_to_cancel">Request to Cancel</string>
    <string name="text_pickup_cancel_success">&#160;Pickup Cancel - Success&#160;</string>
    <string name="text_pickup_failed_reason">Pickup Failed Reason</string>
    <string name="text_pickup_date_retried">Pickup date will be retried</string>
    <string name="text_select">Select</string>
    <string name="text_pickup_fail_success">&#160;Pickup Fail - Success&#160;</string>
    <string name="text_total_scan_qty_pop">Total Pickup Scan(POP) Qty</string>
    <string name="text_take_back_qty">Take Back Scan Qty</string>
    <string name="text_changed_scan_qty_pop">Changed Pickup Scan(POP) Qty</string>
    <string name="text_camera">Camera</string>
    <string name="text_scanner">Scanner</string>
    <string name="text_bluetooth">Bluetooth</string>
    <string name="text_scanner_mode">Cable Scanner reader mode</string>
    <string name="text_bluetooth_mode">Bluetooth reader mode</string>
    <string name="text_disconnected">Disconnected</string>
    <string name="text_scan_for_devices">Scan for devices</string>
    <string name="text_please_type_number">Please type a tracking number</string>
    <string name="text_scanned">Scanned&#160;:&#160;</string>
    <string name="text_scanning">Scanning</string>
    <string name="text_connected">Connected</string>
    <string name="text_connecting">Connecting…</string>
    <string name="text_connected_to">Connected to </string>
    <string name="text_driver_assign_result">[Driver Assign] Result</string>
    <string name="text_not_assigned"> Not Assigned </string>
    <string name="text_success"> Success </string>
    <string name="text_scanned_failed">Scanned Failed</string>
    <string name="text_driver_assign">Driver Assign…</string>
    <string name="text_fail_update">FAIL Update</string>
    <string name="text_http_request_error">Http Request Error</string>
    <string name="text_invalidation_alert">Invalidation alert</string>
    <string name="text_verification">Verification</string>
    <string name="text_alert">Alert</string>
    <string name="text_enter_your_information">Enter your Information</string>
    <string name="text_summary">Summary</string>
    <string name="text_detail">Detail</string>
    <string name="text_dpc3_out_date">DPC3-Out Date</string>
    <string name="text_desired_date1">Desired Date</string>
    <string name="text_qty1">Qty</string>
    <string name="button_print_label">Print Label</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_add_scan">Add Scan</string>
    <string name="button_take_back">Take Back</string>
    <string name="button_save">Save</string>
    <string name="button_confirm">Confirm</string>
    <string name="text_full_name">Full Name</string>
    <string name="text_email">Email</string>
    <string name="text_qdrive_id">Qdrive ID</string>
    <string name="text_write_hint">write…</string>
    <string name="text_status">Status</string>
    <string name="msg_full_name_info">Full name should be 6 or more letter words.</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_other_devices">Other available devices</string>
    <string name="title_paired_devices">Paired Devices</string>
</resources>