<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_capture_bluetooth_paired_devices_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666"
        android:padding="5dp"
        android:text="@string/title_paired_devices"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_24px"
        android:visibility="visible" />

    <ListView
        android:id="@+id/list_capture_bluetooth_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="true" />

    <TextView
        android:id="@+id/text_capture_bluetooth_other_devices_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666"
        android:padding="5dp"
        android:text="@string/title_other_devices"
        android:textColor="#fff"
        android:textSize="@dimen/text_size_24px"
        android:visibility="visible" />

    <ListView
        android:id="@+id/list_capture_bluetooth_other_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:stackFromBottom="true" />

    <Button
        android:id="@+id/btn_capture_bluetooth_scan_devices"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_round_5_cccccc"
        android:text="@string/button_scan"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_30px" />

    <Button
        android:id="@+id/btn_capture_bluetooth_cancel"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_round_5_cccccc"
        android:text="@string/button_cancel"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_30px" />
</LinearLayout>