<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f0f0f0"
    android:orientation="vertical">

    <include layout="@layout/top_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_tracking_no"
                        android:textColor="@color/color_303030"
                        android:textSize="@dimen/text_size_30px" />

                    <TextView
                        android:id="@+id/text_sign_d_r_tracking_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/color_ff0000"
                        android:textSize="@dimen/text_size_30px"
                        android:textStyle="bold"
                        tools:text="SGP123456789" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_e5e5e5" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_receiver"
                        android:textColor="@color/color_303030"
                        android:textSize="@dimen/text_size_30px" />

                    <TextView
                        android:id="@+id/text_sign_d_r_receiver"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/color_303030"
                        android:textSize="@dimen/text_size_30px"
                        android:textStyle="bold"
                        tools:text="Ono shinseitaru" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <LinearLayout
                        android:id="@+id/layout_sign_d_receiver"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_sign_d_r_receiver_self"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/qdrive_btn_icon_check_on" />

                        <TextView
                            android:id="@+id/text_sign_d_r_receiver_self"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="13dp"
                            android:text="@string/text_self"
                            android:textColor="@color/color_303030"
                            android:textSize="@dimen/text_size_24px" />

                        <ImageView
                            android:id="@+id/img_sign_d_r_receiver_substitute"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/qdrive_btn_icon_check_off" />

                        <TextView
                            android:id="@+id/text_sign_d_r_receiver_substitute"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="13dp"
                            android:text="@string/text_substitute"
                            android:textColor="@color/color_303030"
                            android:textSize="@dimen/text_size_24px" />

                        <ImageView
                            android:id="@+id/img_sign_d_r_receiver_other"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/qdrive_btn_icon_check_off" />

                        <TextView
                            android:id="@+id/text_sign_d_r_receiver_other"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_other"
                            android:textColor="@color/color_303030"
                            android:textSize="@dimen/text_size_24px" />
                    </LinearLayout>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_e5e5e5" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_sender"
                        android:textColor="@color/color_303030"
                        android:textSize="@dimen/text_size_30px" />

                    <TextView
                        android:id="@+id/text_sign_d_r_sender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/color_303030"
                        android:textSize="@dimen/text_size_30px"
                        android:textStyle="bold"
                        tools:text="Jason Kwon" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_e5e5e5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/text_signature"
                        android:textColor="@color/color_303030"
                        android:textSize="@dimen/text_size_30px" />

                    <LinearLayout
                        android:id="@+id/layout_sign_d_r_sign_eraser"
                        android:layout_width="90dp"
                        android:layout_height="32dp"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/border_radius_30_cccccc_ffffff"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="21dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/qdrive_btn_icon_eraser" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_clear"
                            android:textColor="@color/color_8f8f8f"
                            android:textSize="@dimen/text_size_28px" />
                    </LinearLayout>
                </RelativeLayout>

                <com.giosis.util.qdrive.list.SigningView
                    android:id="@+id/sign_view_sign_d_r_signature"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/border_radius_5_e5e5e5_ffffff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/text_memo"
                    android:textColor="@color/color_303030"
                    android:textSize="@dimen/text_size_30px" />

                <EditText
                    android:id="@+id/edit_sign_d_r_memo"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/border_radius_5_e5e5e5_ffffff"
                    android:maxLength="99"
                    android:padding="10dp"
                    android:textColor="@color/color_8f8f8f"
                    android:textSize="@dimen/text_size_30px"
                    tools:text="Driver memo" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_sign_d_r_save"
                android:layout_width="131dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_radius_30_4fb648"
                android:gravity="center"
                android:text="@string/button_save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_32px" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>